# mini-games

./: CMakeLists.txt  battleship.cpp  main.cpp  main_tic-tac-toe.cpp  mainwindow.cpp  mainwindow.h  puzzle.cpp  puzzlewindow.cpp  tic-tac-toe.cpp  tik_tak_toe.cpp
Battleship/: CMakeLists.txt  battleship.cpp  battleshipgame.cpp  battleshipgame.h  main.cpp
MainMenu/: CMakeLists.txt  main.cpp  mainmenu.cpp  mainmenu.h
Puzzle/: puzzlewindow.cpp  puzzlewindow.h
Puzzle/images/: guide
realese/: MyQtApp  PuzzleGame  battleshipgame  mainmenu
tic-tac-toe/: CMakeLists.txt  main_tic-tac-toe.cpp  tic-tac-toe.h
